src/main/java/com/example/home_stock_api/common/error/BusinessException.java
package com.example.home_stock_api.common.error;

import lombok.Getter;

@Getter
public class BusinessException extends RuntimeException {
    private final ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        this.errorCode = errorCode;
    }
}
